# pyglimshow

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_cpp.py  example_basic.py  procam_capture.py  pyproject.toml
glimshow/: __init__.py  helper.py
glimshow/cpp/: binding.cpp  gl_imshow.cpp  gl_imshow.hpp  glsl_program_wrapper.cpp  glsl_program_wrapper.hpp
pyglimshow/: __init__.py  helper.py
pyglimshow/cpp/: binding.cpp  gl_imshow.cpp  glsl_program_wrapper.cpp
