[project]
name = "pyglimshow"
version = "0.1.0"
description = "Display an image via OpenGL in Python"
authors = [
    { name = "Ryota Maeda", email = "42407614+elerac@users.noreply.github.com" }
]
dependencies = [
    "nanobind>=2.1.0",
    "typing-extensions>=4.12.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["pyglimshow"]
